# clean-arch-study

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  ruff.toml
src/: main.py
src/application/: __init__.py
src/application/api/: __init__.py  app.py  exception_handlers.py
src/application/api/config/: __init__.py  sentry_config.py
src/application/api/middlewares/: __init__.py
src/application/api/routers/: health_check_route.py
src/domain/__shared/entity/: __init__.py  aggregate_root.py  external_entity_id.py
src/domain/__shared/entity/unique_entity_id/: __init__.py  error.py  unique_entity_id.py
src/domain/__shared/error/: __init__.py  domain_error.py  invalid_uuid_error.py
src/domain/__shared/event/: __init__.py  event.py  event_dispatcher.py  event_dispatcher_interface.py  event_handler_interface.py
src/domain/__shared/repository/: __init__.py  paged_result.py  repository_interface.py
src/domain/__shared/validator/: __init__.py  error.py  error_details.py  validator_interface.py
src/domain/__shared/value_object/: __init__.py  unique_entity_id.py  value_object.py
src/infra/: __init__.py
src/infra/config/: __init__.py  env_file_settings.py  settings.py
tests/domain/__shared/entity/: test_aggregate_root.py  test_external_entity_id.py
tests/domain/__shared/event/: test_event_dispatcher.py  test_event_dispatcher_interface.py
tests/domain/__shared/repository/: test_repository_interface.py
tests/domain/__shared/validator/: test_validation_interface.py
tests/domain/__shared/value_object/: test_value_object.py
(+3 files in other folders)
