[tool.poetry]
name = "clean-architecture-study"
version = "0.1.0"
description = ""
authors = ["Lucas Cristovam <lucaschfonseca@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = "~3.12"
bson = "~0.5.10"
pydantic-settings = "~2.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "~0.5.7"
pre-commit = "~3.8.0"
radon = "~6.0.1"
xenon = "~0.9.1"
gitlint = "~0.19.1"
coverage = "^7.6.1"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
